@@ -10,6 +10,7 @@
   * Scan the colormap instead of all of the pixels, when possible, to
     determine whether the image received by the PNG encoder is grayscale
     or black-and-white.
+  * Avoid reading from the colormap in coders/png.c when it is NULL.
 
 2011-02-22  6.6.7-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.6.7-9.
